# chinese2pinyin

./: .travis.yaml  .travis.yml  CMakeLists.txt  Makefile  README.md  chinese2pinyin.cpp  chinese2pinyin.h  convert.cpp  main.cpp
debian/: changelog  chinese2pinyin.desktop  control  copyright  install
